--- a/frontend/src/pages/projectList.scss
+++ b/frontend/src/pages/projectList.scss
@@ -15,6 +15,7 @@ ol.projects-section {
       list-style: none;
       font-size: calc(12px + 2vmin);
       color: var(--light-secondary-color);
+      letter-spacing: 0.1rem;
     }
 
     li.project:hover {
