--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -20,18 +20,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  //   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  //   sans-serif;
 }
-
-// body {
-// overflow: hidden;
-// }
 
 .App {
   text-align: center;
-  // height: 100vh;
   font-family: var(--regular-font);
   font-size: calc(12px + 2vmin);
   font-weight: 600;
@@ -100,7 +92,6 @@
       a:hover,
       a:active {
         color: var(--dark-primary-color);
-        // text-decoration: underline var(--bright-secondary-color);
       }
     }
 
@@ -129,26 +120,24 @@
     font-size: calc(24px + 2vmin);
     text-align: left;
     font-weight: 600;
-    // background: var(--light-primary-color-transp);
   }
 
   p {
     padding: 1rem;
     color: var(--light-secondary-color);
     text-align: left;
-    line-height: 1.5rem;
-    letter-spacing: 0.02rem;
+    line-height: 2rem;
+    letter-spacing: 0.04rem;
 
     @media screen and (min-width: 1024px) {
-      line-height: 2rem;
-      max-width: 60%;
-      margin-left: 20%;
+      line-height: 2.5rem;
+      width: 60%;
+      margin: 0 auto;
     }
   }
 
   .p-home {
     padding-top: 3rem;
-    letter-spacing: 0.04rem;
     line-height: 2.5rem;
 
     span {
