september update: added the AFAC974 project and role I have played in each project

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -68,8 +68,8 @@
     .navbar {
       padding-top: 1rem;
       display: flex;
-      justify-content: space-between;
-      width: 75vw;
+      justify-content: space-around;
+      width: 85vw;
       list-style: none;
       font-size: calc(8px + 2vmin);
       color: var(--light-primary-color);
