--- a/frontend/src/pages/about.scss
+++ b/frontend/src/pages/about.scss
@@ -10,8 +10,8 @@
   }
 }
 
-ol.tech-section,
-ol.tool-section {
+.tech-section,
+.tool-section {
   display: flex;
   flex-wrap: wrap;
   padding: 1rem;
@@ -25,22 +25,22 @@ ol.tool-section {
     color: var(--dark-primary-color);
   }
 
-  li.tech-label {
+  .tech-label {
     background-color: var(--bright-secondary-color);
   }
 
-  li.project {
+  .project {
     width: 11em;
     text-align: center;
     margin-left: 0;
     margin-right: 0.6rem;
   }
 
-  li.tool-label {
+  .tool-label {
     background-color: var(--light-secondary-color);
   }
 }
 
-ol.project {
+.project {
   padding: 0;
 }
