--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -32,7 +32,7 @@
     font-size: calc(16px + 2vmin);
   }
 
-  img.background {
+  .background {
     position: fixed;
     z-index: -1;
   }
@@ -95,7 +95,7 @@
       }
     }
 
-    h1.App-name {
+    .App-name {
       padding-top: 0.75rem;
       padding-bottom: 3rem;
       color: var(--light-secondary-color);
