CSS and CV update

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -66,32 +66,46 @@
     font-family: var(--title-font);
 
     .navbar {
-      padding-top: 1rem;
+      padding: 1rem;
+      padding-bottom: 0;
       display: flex;
-      justify-content: space-around;
-      width: 85vw;
+      justify-content: space-between;
+      width: 100%;
       list-style: none;
       font-size: calc(8px + 2vmin);
       color: var(--light-primary-color);
 
-      li {
-        padding: 0.5rem;
-        border-radius: 0.25rem;
-        letter-spacing: 0.02rem;
-      }
-
-      li:hover {
-        background-color: var(--light-primary-color);
+      @media screen and (min-width: 1024px) {
+        width: 60%;
       }
 
       a,
       a:visited {
         color: var(--light-primary-color);
+        padding: 0.5rem;
+        border-radius: 0.25rem;
+        letter-spacing: 0.02rem;
+      }
+
+      #first {
+        padding-left: 0;
+      }
+
+      #last {
+        padding-right: 0;
+      }
+
+      #first,
+      #last {
+        @media screen and (min-width: 1024px) {
+          padding: 0.5rem;
+        }
       }
 
       a:hover,
       a:active {
         color: var(--dark-primary-color);
+        background-color: var(--light-primary-color);
       }
     }
 
