--- a/frontend/src/pages/projectList.scss
+++ b/frontend/src/pages/projectList.scss
@@ -4,21 +4,26 @@
   align-items: center;
   padding: 1rem;
 
-  a {
+  .project-title {
+    list-style: none;
     margin: 0.3rem;
-    border-radius: 4px;
-    width: 50%;
+    font-size: calc(12px + 2vmin);
+    width: 100%;
 
-    .project {
+    .project-link {
+      display: inline-block;
       padding: 0.5rem;
-      width: 100%;
-      list-style: none;
-      font-size: calc(12px + 2vmin);
+      border-radius: 4px;
+      width: 60%;
       color: var(--light-secondary-color);
       letter-spacing: 0.1rem;
+
+      @media screen and (min-width: 1024px) {
+        width: 35%;
+      }
     }
 
-    .project:hover {
+    .project-link:hover {
       color: var(--dark-primary-color);
       background-color: var(--light-primary-color);
     }
