--- a/frontend/src/pages/about.scss
+++ b/frontend/src/pages/about.scss
@@ -41,8 +41,7 @@
 
 .p-about,
 h3,
-.tech-section,
-.tool-section {
+.tech-tool-stack-page {
   @media screen and (min-width: 1024px) {
     max-width: 60%;
     margin-left: 20%;
